# Rift.Renderer.SimpleRenderer

./: CMakeLists.txt  module.json
assets/Engine/Shaders/DirectX/: Pixel3D.hlsl  Vertex2D.hlsl  Vertex3D.hlsl
assets/Engine/Shaders/OpenGL/: Fragment3D.glsl  Vertex3D.glsl
private/Engine/Renderer/: SimpleRenderer.cpp
public/Engine/Renderer/: SimpleRenderer.hpp
